# Lopho

./: README.md  attribute_fetcher.py  auto_mission.py  auto_mission_takeoff_to_5m.py  connect_sitl_mavsdk.py  first.py  library.py  mav.parm  mav.tlog  mav.tlog.raw
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh
config/: wpa_supplicant.conf
old_codes_src/: connect_sitl_mavsdk.py  connection_template.py
ros2_ws/src/lopho_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/lopho_pkg/launch/: flight_mode_node.launch.py
ros2_ws/src/lopho_pkg/src/: flight_mode_node.cpp  fligt_mode_node.cpp  sitl_controller.cpp
ros2_ws/src/my_package/: CMakeLists.txt  package.xml
ros2_ws/src/my_package/src/: apm_controller.cpp  my_node.cpp
scripts/: start_drone_system_DEV.sh  start_drone_system_PULL.sh
simulation/: mission1_fence_no_breach.plan  mission2_fence_with_breach.plan
src/: README.md  auto_mission_fly_vertical_5meter.py
src/startup/: newshell.py  startup.py  startup.sh
startup/: startup.service
